--- a/deploy/tournament-deploy.yaml
+++ b/deploy/tournament-deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: tennis-tournament
-          image: tennis-tournament # Image that will be used to containers in the cluster
+          image: tournamentacr.azurecr.io/rortizpe/tennis-tournament:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
@@ -27,7 +27,7 @@ spec:
   selector:
     app: tennis-tournament
   ports:
-    - protocol: "TCP"
+    - protocol: TCP
       port: 8080 # The port that the service is running on in the cluster
       targetPort: 8110 # The port exposed by the service
-  type: NodePort # type of the service.
+  type: LoadBalancer # type of the service.
